# trip-planer

./: .dockerignore  .env.development.local  .env.testing.local  .gitignore  README.DEV.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: backend.yml  tests.yml
backend/: .coveragerc  .dockerignore  .env.local  README.MD  pyproject.toml
backend/docker/: entrypoint.sh
backend/docker/django/: Dockerfile  check_superuser.sh  run.sh
backend/docker/test/: Dockerfile
backend/src/apps/attractions/: apps.py  schemas.py  serializers.py  urls.py  views.py
backend/src/apps/attractions/migrations/: 0001_initial.py  0002_alter_attraction_latitude_alter_attraction_location_and_more.py
backend/src/apps/attractions/models/: __init__.py  attraction_model.py  category_model.py
backend/src/apps/auth/: serializers.py  urls.py  utils.py  views.py
backend/src/apps/media/: enums.py  managers.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/src/apps/media/migrations/: 0001_initial.py
backend/src/apps/threads/: apps.py  serializers.py  urls.py  views.py
backend/src/apps/threads/migrations/: 0001_initial.py  0002_alter_review_time_spent.py
backend/src/apps/threads/models/: __init__.py  comment_model.py  review_model.py
backend/src/apps/users/: serializers.py  signals.py  urls.py  views.py
backend/src/apps/users/managers/: __init__.py  profile_manager.py  user_manager.py
backend/src/apps/users/migrations/: 0001_initial.py
backend/src/apps/users/models/: __init__.py  profile_model.py  user_model.py
backend/src/common/: multithreading_utils.py
backend/src/core/: paths.py  settings.py  storages.py  urls.py
backend/src/core/settings/: __init__.py  base.py  development.py  testing.py
backend/src/tests/: conftest.py
backend/src/tests/attractions/: test_views.py
backend/src/tests/media/: conftest.py  test_services.py  test_storage.py
backend/src/tests/threads/: test_views.py
backend/src/tests/users/: test_models.py  test_views.py
mobile_expo/planer_app/: .env.template  App.tsx  app.json  consts.ts  package-lock.json  package.json
mobile_expo/planer_app/components/utils/: statusIcon.ts
mobile_expo/planer_app/components/views/Attraction/: Router.tsx
mobile_expo/planer_app/components/views/Attraction/Review/: AddNew.tsx  Edit.tsx
mobile_expo/planer_app/components/views/Attraction/api/: attractionsApi.ts
mobile_expo/planer_app/components/views/Attractions/: Router.tsx
mobile_expo/planer_app/components/views/Attractions/AddNew/: AttractionForm.tsx
mobile_expo/planer_app/components/views/Attractions/Review/: AttractionReviewForm.tsx
mobile_expo/planer_app/components/views/Attractions/Search/: Search.tsx
mobile_expo/planer_app/components/views/Attractions/api/: attractionsApi.ts
mobile_expo/planer_app/components/views/Auth/SignIn/: SignIn.tsx
mobile_expo/planer_app/components/views/Dashboard/: Dashboard.tsx  styles.ts
mobile_expo/planer_app/components/views/Dashboard/api/: attractionsApi.ts  nominatimApi.ts
mobile_expo/planer_app/components/views/Dashboard/components/: BottomPanel.tsx  MapBoard.tsx  Search.tsx
mobile_expo/planer_app/components/views/Route/: Router.tsx  styles.ts  types.ts
mobile_expo/planer_app/components/views/Route/AddNew/: CreateRoute.tsx
mobile_expo/planer_app/components/views/User/: UserDashboard.tsx
mobile_expo/planer_app/components/views/common/: AttractionDetail.tsx  styles.ts
mobile_expo/planer_app/components/views/test/: Router.tsx
mobile_expo/planer_app/routers/: DrawerParamList.tsx  Router.tsx
mobile_expo/planer_app/routers/components/: DrawnerContent.tsx  MainRouter.tsx
mobile_native/components/views/Dashboard/: Dashboard.tsx
mobile_native/routers/: Router.tsx
old_backend/src/attraction/repositories/: attraction_repo.py
to-delete/: endpoint-threads.md  endpoints-attractions.md  endpoints-authorizations.md  endpoints-media.md  endpoints-profiles.md  endpoints-users.md
(+14 files in other folders)
